fix: schedule delay and styles

--- a/src/app/schedule/schedule-by-dates-stations/schedule-by-dates-stations.component.html
+++ b/src/app/schedule/schedule-by-dates-stations/schedule-by-dates-stations.component.html
@@ -44,6 +44,7 @@
             <div class="col form-group">
               <label class="text-warning font-weight-bold">DATE ARRIVAL</label>
               <input type="date" class="form-control text-center" width="50" name="dateArrival"
+                     id="dateArrivalByDates"
                      ngModel #dateArrival="ngModel">
             </div>
             <div class="col-1"></div>
